# sns-addict

./: .gitignore  LICENSE  README.md  package.json  plugin.yaml  pyproject.toml  pytest.ini
assets/: SOUL.md
docs/: ARCHITECTURE.md  HERMES-INTEGRATION.md  INSTALLATION.md  MVP-SPEC.md  PERSONA-GUIDE.md  PRODUCT-FLOW.md  RUNBOOK-W2-W3-F3.md
sns_addict/: __init__.py  adapter.py  cli.py  llm_backend.py  onboarding.py  setup_flow.py
sns_addict/actions/: dm.py  group.py  humanize.py  reels.py  story.py
sns_addict/browser/: lifecycle.py  login.py  selectors.py  session.py  stealth.py
sns_addict/dashboard/: server.py
sns_addict/detection/: dispatcher.py  dom_observer.py
sns_addict/guardrails/: cold_start_grace.py  dedup.py  halt_now.py  identity_canary.py  loop_detector.py  quiet_hours.py  volume_cap.py
sns_addict/loops/: active_behavior.py  inbound.py  mood_scheduler.py
sns_addict/persistence/: allowlist.py  conversations.py  events.py  state.py
sns_addict/runtime/: supervisor.py
sns_addict/tests/: test_active_behavior.py  test_adapter.py  test_alerts_routes.py  test_browser_session.py  test_cold_start_grace.py  test_conversations_routes.py  test_dashboard_routes.py  test_dedup.py  test_dm_actions.py  test_dom_observer.py  test_group_dm.py  test_halt_now.py  test_humanize.py  test_identity_canary.py  test_inbound_loop.py  test_invoke_llm.py  test_llm_backend.py  test_long_run.py  test_loop_detector.py  test_mood_scheduler.py  test_npm_wrapper.py  test_onboarding_runtime.py  test_package_data.py  (+8 more)
tools/: f3_latency_check.py  voice_replay.py  voice_score.py
(+17 files in other folders)
